# crypto-master

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
.claude/agents/: team-lead.md  (+5 more)
aidlc-docs/: aidlc-state.md
config/: runtime_flags.yaml.example  sub_accounts.yaml  sub_accounts.yaml.example
docs/: AGENT-TEAM.md  CLEAN-CODE-AND-ARCHITECTURE.md  TECH-DEBT.md  baselines.md  deployment.md  development-plan.md  inception.md  requirements.md  team-design.md  team-priorities.md
scripts/: __init__.py  auto_research_candidates.py  backtest_baselines.py  backtest_combinations.py  goal_baseline.py  goal_eval.py  goal_gamble.py  lint-fix.sh  lint.sh  paper_run_tsmom.py  run_robustness_gate.py
src/: __init__.py  config.py  exceptions.py  logger.py  main.py  models.py
strategies/: bollinger_bands.py  chasulang_ict_smc.md  ma_crossover.py  momentum_pinball_orb.py  raschke_holy_grail.py  rsi.py  rsi_15m.py  rsi_4h.py  sample_code.py  sample_prompt.md  session_vwap_pullback.py  tsmom_vol_breakout.py  turtle_soup_reclaim.py  vcp_breakout.py  vwap_mean_reversion.py  weinstein_stage2_filter.py
tests/: __init__.py  conftest.py  test_ai_claude.py  test_ai_exceptions.py  test_ai_improver.py  test_ai_ports.py  test_backtest_analyzer.py  test_backtest_engine.py  test_backtest_harness.py  test_backtest_metrics.py  test_backtest_multi_timeframe.py  test_backtest_snapshot.py  test_backtest_validator.py  test_baseline_strategies.py  test_config.py  test_dashboard_app.py  test_dashboard_autopsy.py  test_dashboard_engine.py  test_dashboard_feedback.py  test_dashboard_ops.py  test_dashboard_proposals.py  test_dashboard_replay.py  test_dashboard_strategies.py  test_dashboard_trading.py  test_exchange_base.py  test_exchange_binance.py  test_exchange_bybit.py  test_exchange_ccxt_base.py  test_feedback_audit.py  test_feedback_loop.py  test_feedback_promotion_lab.py  test_import_hygiene.py  test_jsonl_rotator.py  test_leverage_pnl_no_double_apply.py  test_live_trading.py  test_logger.py  test_main_dispatch.py  test_market_regime.py  test_models.py  test_multi_timeframe_smoke.py  (+53 more)
(+599 files in other folders)
